Fixed a bug where resizing the textarea would cause overflow issues

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -200,6 +200,10 @@ input[type="email"] {
 
 	.field {
 		width: (100% / 2);
+
+		&:nth-child(odd) {
+			clear: left;
+		}
 	}
 	&.three-columns {
 		.field {
@@ -213,7 +217,8 @@ input[type="email"] {
 	margin: $margins;
 
 	input[type="text"], textarea {
-		width: 100%
+		width: 100%;
+		max-width: 100%;
 	}
 }
 label {
